--- a/EE_Web/test-output/old/Suite/reporter-output.html
+++ b/EE_Web/test-output/old/Suite/reporter-output.html
@@ -1,5 +1,6 @@
 <h2>Reporter output</h2><table><tr><td>Chrome Browser is opened</td></tr>
 <tr><td>Browser is maximized.</td></tr>
+<tr><td>User has opened correct Application Form page.</td></tr>
 <tr><td>User has entered Full Name successfully.</td></tr>
 <tr><td>User has entered Mobile successfully.</td></tr>
 <tr><td>User has entered Email Address successfully.</td></tr>
@@ -10,34 +11,27 @@
 <tr><td>Provided Lead details are submitted successfully.</td></tr>
 <tr><td>User has opened Application Form successfully.</td></tr>
 <tr><td>User has opened calender successfully.</td></tr>
-<tr><td>User has provided Date of Birth successfully.</td></tr>
-<tr><td>User has entered blood group value successfully.</td></tr>
+<tr><td>User has entered PlaceOfBirth value successfully.</td></tr>
 <tr><td>User has entered Gender value successfully.</td></tr>
-<tr><td>User has entered Citizenship value successfully.</td></tr>
+<tr><td>User has entered blood group value successfully.</td></tr>
 <tr><td>User has entered Nationality value successfully.</td></tr>
-<tr><td>User has failed to provide Domicile value.</td></tr>
+<tr><td>User has entered Aadhaar Number value successfully.</td></tr>
+<tr><td>User has entered Passport Number value successfully.</td></tr>
+<tr><td>User has entered Place Of Issue value successfully.</td></tr>
+<tr><td>User has opened date of issue calender successfully.</td></tr>
+<tr><td>User has provided Date of Issue successfully.</td></tr>
+<tr><td>User has opened Expiry Date calender successfully.</td></tr>
+<tr><td>User has provided Expiry Date successfully.</td></tr>
 <tr><td>User has entered Religion value successfully.</td></tr>
+<tr><td>User has entered Citizenship value successfully.</td></tr>
+<tr><td>User has failed to provide Caste value.</td></tr>
+<tr><td>User has failed to provide Domicile value.</td></tr>
 <tr><td>User has failed to provide Community value.</td></tr>
-<tr><td>User has failed to provide Caster value.</td></tr>
-<tr><td>User has entered Address value successfully.</td></tr>
+<tr><td>User has entered Present Address value successfully.</td></tr>
 <tr><td>User has failed to provide Country value.</td></tr>
 <tr><td>User has failed to State Gender value.</td></tr>
 <tr><td>User has failed to provide City value.</td></tr>
-<tr><td>User has entered Emergency Contact Number value successfully.</td></tr>
-<tr><td>User has entered Emergency Email value successfully.</td></tr>
-<tr><td>User has entered Alternate Address 1 value successfully.</td></tr>
-<tr><td>User has entered Alternate Address 2 value successfully.</td></tr>
-<tr><td>User has entered Alternate Contact Number value successfully.</td></tr>
+<tr><td>User has successfully entered Pincode value in Present Address section.</td></tr>
+<tr><td>User has clicked Same Address checkbox successfully.</td></tr>
 <tr><td>User has clicked Next button  on Step 1 successfully.</td></tr>
-<tr><td>User has failed to provide Course value.</td></tr>
-<tr><td>User has failed to provide Year of Passing value.</td></tr>
-<tr><td>User has failed to provide SSC Mode of Study value.</td></tr>
-<tr><td>User has failed to provide HSC Year of Passing value.</td></tr>
-<tr><td>User has failed to provide HSC Mode of Study value.</td></tr>
-<tr><td>User has attached Certificate1 successfully.</td></tr>
-<tr><td>User has attached Certificate2 successfully.</td></tr>
-<tr><td>User has attached Certificate3 successfully.</td></tr>
-<tr><td>User has attached Certificate4 successfully.</td></tr>
-<tr><td>User has attached Certificate5 successfully.</td></tr>
-<tr><td>User has failed to provide Payment Type value.</td></tr>
 </table>
