--- a/EE_Web/test-output/old/Suite/methods-not-run.html
+++ b/EE_Web/test-output/old/Suite/methods-not-run.html
@@ -1,2 +1,40 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideGuardiansAddress1</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideHSCYearOfPassing</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideGuardiansAddress2</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideSubject1NameValue</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.providePaymentType</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideMothersName</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideSubject3NameValue</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideHSCRegNumber</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.providePaymentAmount</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideSubject3Marks3Value</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideGuardiansRelation</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideSSCModeOfStudy</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideSubject2Marks1Value</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideSubject2NameValue</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideSubject3Percetage3Value</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideEntranceExamValue</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.attachAttachment3</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideGuardiansContactNumber</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideHSCModeOfStudy</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.attachAttachment1</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideSSCYearOfPassing</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.attachAttachment2</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.clickSubmitButtonStep4</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.attachAttachment5</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideHSCSchoolName</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideSubject2Percetage2Value</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.attachAttachment4</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideHSCPercentageValue</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideSubject1Percetage1Value</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideSubject1Marks1Value</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideCourse</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideSSCSchoolName</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideFathersName</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideSSCPercentageValue</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideSSCRegNumber</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.provideGuardiansName</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.clickNextButtonStep3</td></tr>
+<tr><td>whitefeather.xedge.testcases.FillUpApplicationForm.clickNextButtonStep2</td></tr>
 </table>
