--- a/EE_Web/test-output/old/Suite/reporter-output.html
+++ b/EE_Web/test-output/old/Suite/reporter-output.html
@@ -11,6 +11,7 @@
 <tr><td>Provided Lead details are submitted successfully.</td></tr>
 <tr><td>User has opened Application Form successfully.</td></tr>
 <tr><td>User has opened calender successfully.</td></tr>
+<tr><td>User has provided Date of Birth successfully.</td></tr>
 <tr><td>User has entered PlaceOfBirth value successfully.</td></tr>
 <tr><td>User has entered Gender value successfully.</td></tr>
 <tr><td>User has entered blood group value successfully.</td></tr>
@@ -24,14 +25,37 @@
 <tr><td>User has provided Expiry Date successfully.</td></tr>
 <tr><td>User has entered Religion value successfully.</td></tr>
 <tr><td>User has entered Citizenship value successfully.</td></tr>
-<tr><td>User has failed to provide Caste value.</td></tr>
-<tr><td>User has failed to provide Domicile value.</td></tr>
-<tr><td>User has failed to provide Community value.</td></tr>
+<tr><td>User has entered Caste value successfully.</td></tr>
+<tr><td>User has entered Domicile value successfully.</td></tr>
+<tr><td>User has entered Community value successfully.</td></tr>
 <tr><td>User has entered Present Address value successfully.</td></tr>
-<tr><td>User has failed to provide Country value.</td></tr>
-<tr><td>User has failed to State Gender value.</td></tr>
-<tr><td>User has failed to provide City value.</td></tr>
+<tr><td>User has entered Country value successfully.</td></tr>
+<tr><td>User has entered State value successfully.</td></tr>
+<tr><td>User has entered City value successfully.</td></tr>
 <tr><td>User has successfully entered Pincode value in Present Address section.</td></tr>
+<tr><td>User has entered Emergency Contact Number value successfully.</td></tr>
 <tr><td>User has clicked Same Address checkbox successfully.</td></tr>
 <tr><td>User has clicked Next button  on Step 1 successfully.</td></tr>
+<tr><td>Provided DOB matches the value stored in database.</td></tr>
+<tr><td>Provided Place Of Birth matches the value stored in database.</td></tr>
+<tr><td>Provided Gender matches the value stored in database.</td></tr>
+<tr><td>Provided Nationality matches the value stored in database.</td></tr>
+<tr><td>Provided Aadhaar Number matches the value stored in database.</td></tr>
+<tr><td>Provided Passport Number matches the value stored in database.</td></tr>
+<tr><td>Provided Place Of Issue matches the value stored in database.</td></tr>
+<tr><td>Provided Date Of Issue matches the value stored in database.</td></tr>
+<tr><td>Provided Expiry Date matches the value stored in database.</td></tr>
+<tr><td>Provided Religion matches the value stored in database.</td></tr>
+<tr><td>Provided CitizenShip matches the value stored in database.</td></tr>
+<tr><td>Provided Caste matches the value stored in database.</td></tr>
+<tr><td>Provided Domicile matches the value stored in database.</td></tr>
+<tr><td>Provided Community matches the value stored in database.</td></tr>
+<tr><td>Provided Present Address matches the value stored in database.</td></tr>
+<tr><td>Provided Present Address Country matches the value stored in database.</td></tr>
+<tr><td>Provided Present Address City matches the value stored in database.</td></tr>
+<tr><td>User has entered Fathers Name value successfully.</td></tr>
+<tr><td>User has entered Fathers Qualification value successfully.</td></tr>
+<tr><td>User has entered Fathers Occupation value successfully.</td></tr>
+<tr><td>User has clicked Next button on Step 2successfully.</td></tr>
+<tr><td>Provided Fathers Occupation matches the value stored in database.</td></tr>
 </table>
