--- a/EE_Web/test-output/old/Suite/reporter-output.html
+++ b/EE_Web/test-output/old/Suite/reporter-output.html
@@ -44,7 +44,6 @@
 <tr><td>Provided Passport Number matches the value stored in database.</td></tr>
 <tr><td>Provided Place Of Issue matches the value stored in database.</td></tr>
 <tr><td>Provided Date Of Issue matches the value stored in database.</td></tr>
-<tr><td>Provided Expiry Date matches the value stored in database.</td></tr>
 <tr><td>Provided Religion matches the value stored in database.</td></tr>
 <tr><td>Provided CitizenShip matches the value stored in database.</td></tr>
 <tr><td>Provided Caste matches the value stored in database.</td></tr>
@@ -56,6 +55,38 @@
 <tr><td>User has entered Fathers Name value successfully.</td></tr>
 <tr><td>User has entered Fathers Qualification value successfully.</td></tr>
 <tr><td>User has entered Fathers Occupation value successfully.</td></tr>
+<tr><td>User has entered Fathers Annual Income value successfully.</td></tr>
+<tr><td>User has entered Fathers Email value successfully.</td></tr>
+<tr><td>User has entered Fathers Mobile value successfully.</td></tr>
+<tr><td>User has entered Mothers Name value successfully.</td></tr>
+<tr><td>User has entered Mothers Qualification value successfully.</td></tr>
+<tr><td>User has entered Mothers Occupation value successfully.</td></tr>
+<tr><td>User has entered Mothers Email value successfully.</td></tr>
+<tr><td>User has entered Mothers Mobile value successfully.</td></tr>
+<tr><td>User has entered Guardians Name value successfully.</td></tr>
+<tr><td>User has entered Guardians Address 1 value successfully.</td></tr>
+<tr><td>User has entered Guardians Address 2 value successfully.</td></tr>
+<tr><td>User has entered Guardians Address 3 value successfully.</td></tr>
+<tr><td>User has entered Guardians Relation value successfully.</td></tr>
+<tr><td>User has entered Guardians Relation value successfully.</td></tr>
+<tr><td>User has entered Guardians Contact Number value successfully.</td></tr>
 <tr><td>User has clicked Next button on Step 2successfully.</td></tr>
+<tr><td>Provided Fathers Name matches the value stored in database.</td></tr>
+<tr><td>Provided Fathers Qualification matches the value stored in database.</td></tr>
 <tr><td>Provided Fathers Occupation matches the value stored in database.</td></tr>
+<tr><td>Provided Fathers Annual Income matches the value stored in database.</td></tr>
+<tr><td>Provided Fathers Email matches the value stored in database.</td></tr>
+<tr><td>Provided Fathers Mobile matches the value stored in database.</td></tr>
+<tr><td>Provided Mothers Name matches the value stored in database.</td></tr>
+<tr><td>Provided Mothers Qualification matches the value stored in database.</td></tr>
+<tr><td>Provided Mothers Occupation matches the value stored in database.</td></tr>
+<tr><td>Provided Mothers Email matches the value stored in database.</td></tr>
+<tr><td>Provided Mothers Mobile matches the value stored in database.</td></tr>
+<tr><td>Provided Guardians Name matches the value stored in database.</td></tr>
+<tr><td>Provided Guardians Address 1 matches the value stored in database.</td></tr>
+<tr><td>Provided Guardians Address 2 matches the value stored in database.</td></tr>
+<tr><td>Provided Guardians Address 3 matches the value stored in database.</td></tr>
+<tr><td>Provided Guardians Pincode matches the value stored in database.</td></tr>
+<tr><td>Provided Guardians Relation matches the value stored in database.</td></tr>
+<tr><td>Provided Guardians ContactNumber matches the value stored in database.</td></tr>
 </table>
